[package]
name = "fuse"
version = "0.1.0"
edition = "2024"

[dependencies]
fuser = { version = "0.14", default-features = false, features = ["abi-7-31"] }
libc = "0.2"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled"] }
chacha20poly1305 = "0.10"
argon2 = "0.5"
rand = "0.8"
lru = "0.12"
thiserror = "1.0"
